--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <title>Redireccionando…</title>
     <script type="text/javascript">
-   
-      window.location.href = "/Portafolio_react/";
+      // Redirige a tu index.html manteniendo la ruta después del /
+      var path = window.location.pathname;
+      window.location.href = '/Portafolio_react/#' + path;
     </script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
